Fix font color contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -976,7 +976,7 @@ hr {
 }
 .menu-body .off-can-menu ul li ul li a {
   font-size: 14px;
-  color: var(--default-temp_color-202738);
+  color: var(--default-temp_color-c3d4e4);
   font-family: 400;
   text-transform: uppercase;
   margin-bottom: 18px;
